# giving

giving/: .pnp.cjs  Dockerfile  package.json
giving-account/: .gitignore  makefile  pyproject.toml
giving-account/giving_account/: app.py  config.py  schema.py
giving-account/giving_account/domain/: model.py
giving-account/giving_account/routers/: deps.py
giving-account/giving_account/routers/default/: router.py
giving-account/giving_account/routers/google_auth/: router.py
giving-account/tests/: test_api.py  test_giving_account.py  test_model.py
giving-feed/: pyproject.toml
giving-feed/tests/: test_giving_feed.py
giving-reservation/: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
giving-reservation/db/initdb.d/: init.sh
giving-reservation/giving_reservation/: __init__.py  __main__.py  models.py
giving-reservation/migrations/versions/: b2d7762640a1_initialize_nkmemo_entity.py
giving-reservation/tests/: test_giving_reservation.py  test_reservation.py
giving/src/: App.tsx  constants.ts
giving/src/pages/: login.tsx
